# dell-bd-prochot-fix

./: MAKEDEV-msr  Makefile.am  README.md  configure.ac  disablebdprochot.c  rdmsr.c  version.h  wrmsr.c
